# pythonSdk

./: .gitignore  pyproject.toml  readme.md
examples/: async_example.py  sync_example.py
mediana_sms/: __init__.py  async_client.py  client.py  exeptions.py  models.py
tests/: test_async_client.py  test_client.py
